Fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,6 @@ body,
 .Resizer.disabled:hover {
   border-color: transparent;
 }
+.Pane {
+  overflow: auto;
+}
